[package]
name = "ebb"
version = "0.1.0"
authors = ["Sven Knobloch <sven@knobo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
smol = "*"
scoped-tls = "*"
crossbeam-queue = "*"

ebb-macros = { path = "../ebb-macros" }
